# odtgen

./: Cargo.toml  README.md
assets/: blank.fodt  writer_default_stylesheet.yaml
src/: container.rs  document.rs  fodt_xml_write.rs  image.rs  lib.rs  paragraph.rs  style.rs  stylesheet.rs  stylesheet_parser.rs  tab.rs  table.rs  text.rs  text_span.rs
